tests/ui/async-await/async-fn/trait-bounds-in-macro.stderr
error[E0658]: async closures are unstable
  --> $DIR/trait-bounds-in-macro.rs:8:28
   |
LL |     async fn foo() -> impl async Fn() { }
   |                            ^^^^^
   |
   = note: see issue #62290 <https://github.com/rust-lang/rust/issues/62290> for more information
   = help: add `#![feature(async_closure)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: to use an async block, remove the `||`: `async {`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
